--- a/style.css
+++ b/style.css
@@ -3,21 +3,22 @@
 * {
     list-style: none;
     text-decoration: none;
-    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
-header {
-    height: 100vh;
-    margin: -.5rem;
-    padding: 20px;
-    background-image: url("./assets/bg.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
+body {
+    margin: 0;
 }
 
+header {
+    background-image: url("./assets/bg.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 100vh;
+}
+
+/* sidenav */
 .sidenav {
     height: 100%;
     width: 0;
@@ -26,7 +27,6 @@ header {
     top: 0;
     left: 0;
     background: linear-gradient(300deg, #cbcaff 0%, #87c6fe 100%);
-
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -80,8 +80,6 @@ header {
     background: black;
 }
 
-
-
 /* navbar */
 .header span:nth-of-type(2) {
     font-size: 2rem;
@@ -111,6 +109,12 @@ header {
 
 .header input:hover {
     opacity: 1;
+}
+
+@media screen and (max-width: 786px) {
+    header {
+        zoom: 73%;
+    }
 }
 
 /* order section */
@@ -167,52 +171,143 @@ header {
     font-size: 1rem;
 }
 
-/* services */
-.column-index {
-    float: left;
+/* Services */
+.flex-container {
+    display: flex;
+    color: #222222;
+
+}
+
+.card {
+    transition: 0.3s;
     width: 50%;
-    padding: 0 10px;
+    margin: 20px;
+    border-radius: 10px;
 }
 
-.row-index {
-    margin: 5rem -5px;
+.container {
+    padding: 0px;
 }
 
-.row-index:after {
+.container p a {
+    text-decoration: underline;
+    color: #222222;
+}
+
+
+@media screen and (max-width: 786px) {
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card {
+        width: 90%;
+
+
+    }
+}
+
+/* works */
+.works {
+    padding-bottom: 4rem;
+}
+
+.works h2 {
+    font-size: 3rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+.works p {
+    color: grey;
+}
+
+.column-works {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+    text-align: center;
+    height: 300px;
+}
+
+.column-works img {
+    width: 10rem;
+}
+
+.row-works:after {
     content: "";
     display: table;
     clear: both;
 }
 
-@media screen and (max-width: 600px) {
-    .column-index {
+@media screen and (max-width: 786px) {
+    .column-works {
         width: 100%;
-        display: block;
-        margin-bottom: 20px;
     }
 }
 
-.card-index {
-    padding: 16px;
-    display: flex;
-    text-align: center;
-    flex-direction: column;
+
+/* footer */
+* {
+    box-sizing: border-box;
 }
-.card-index .img img{
-    width: 80vh;
+
+
+
+.column-footer {
+    float: left;
+    width: 33.33%;
+    padding: 20px;
+    height: 300px;
+    border-top: 1px solid rgb(181, 176, 176);
 }
-.card-index .text {
-    text-align: left;
-    margin-left: 3.5rem;
+
+.column-footer span:nth-of-type(1) {
+    font-size: 2rem;
+    padding: 3rem;
+    color: black;
 }
-.card-index .text span:nth-of-type(1){
-    font-weight: bold;
-    font-size: 1.4rem;
+
+.column-footer ul li {
+    padding: 10px;
 }
-.card-index .text span:nth-of-type(2){
+
+.column-footer ul li a {
+    color: black;
+
+}
+
+.column-footer ul li a:hover {
     text-decoration: underline;
 }
-.card-index .text span:nth-of-type(2) a{
-    color: black;
-    font-weight: bold;
+
+.row-footer:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.icons {
+    padding: 3rem;
+    word-spacing: 2rem;
+}
+
+.icons span {
+    word-spacing: 0;
+    float: right;
+}
+
+
+@media screen and (max-width: 786px) {
+    .column-footer {
+        width: 100%;
+    }
+
+    .icons {
+        word-spacing: 1rem;
+        padding: 1rem;
+
+    }
 }
