--- a/components/Account/style.css
+++ b/components/Account/style.css
@@ -80,7 +80,9 @@ body {
     font-size: 2rem;
     padding: 2rem;
 }
-
+.header span:nth-of-type(2) b {
+    color: #87c6fe;
+}
 .header input {
     font-size: 1rem;
     border: none;
