--- a/components/Login/style.css
+++ b/components/Login/style.css
@@ -80,6 +80,9 @@ body {
     font-size: 2rem;
     padding: 2rem;
 }
+.header span:nth-of-type(2) b {
+    color: #87c6fe;
+}
 
 .header a {
     float: right;
