--- a/components/Orders/style.css
+++ b/components/Orders/style.css
@@ -89,7 +89,9 @@ body {
     font-size: 2rem;
     padding: 2rem;
 }
-
+.header span:nth-of-type(2) b {
+    color: #87c6fe;
+}
 
 .header a input {
     border: none;
