--- a/components/Restaurants/style.css
+++ b/components/Restaurants/style.css
@@ -80,12 +80,13 @@ body {
     font-size: 2rem;
     padding: 2rem;
 }
-
+.header span:nth-of-type(2) b {
+    color: #87c6fe;
+}
 .header input {
     font-size: 1rem;
     border: none;
     padding: .5rem 1rem;
-    border-radius: 20px;
     margin: 5px;
     opacity: .8;
 
