--- a/restaurants.css
+++ b/restaurants.css
@@ -60,6 +60,23 @@ body {
     text-align: center;
 }
 
+.sidenav .profile img {
+    display: block;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.sidenav .profile h3 {
+    color: #ffffff;
+    margin: 10px 0 5px;
+}
+
+.sidenav .profile p {
+    color: rgb(206, 240, 253);
+    font-size: 14px;
+}
 .sidenav .profile input {
     border: none;
     font-size: 1rem;
