Login and register split & Logo Update

--- a/components/Register/index.html
+++ b/components/Register/index.html
@@ -40,42 +40,39 @@
                 <input type="button" value="Sign In">
             </a>
         </div><br><br>
-    <!-- forms -->
-    <div class="Login">
-        <div class="main-container">
-            <div class="login-container">
-                <div class="container">
-                    <form class="form" action="" method="POST">
+        <!-- forms -->
+        <div class="Login">
+            <div class="main-container">
+                <div class="login-container">
+                    <div class="container">
+                        <form class="form" action="" method="POST">
+                            <p>
+                                <h8>NOT A MEMBER</h8>
+                                <h7>Need help ?</h7><br></br>
+                            </p>
+                            <br>
+
+                            <input type="text" name="username" placeholder="Username" required><br>
+                            <input type="email" name="email" placeholder="Email Address" required><br>
+                            <input type="password" name="password" placeholder="Password" required><br>
+                            <input type="password" name="cpassword" placeholder="Confirm Password" required>
+                            <br><br>
+                            <button name="submit">Sign Up</button>
+
+                        </form>
+                    </div>
+                    <div class="container-2">
                         <p>
-                            <h8>ALREADY A MEMBER</h8>
-                            <h7>Need help ?</h7><br></br>
+                            Already have an account ?<br>
+                            <a href="../Login/index.html">
+                                Login Here
+                            </a>
                         </p>
-                        <br>
-
-                        <input type="text" name="username" placeholder="Username" required><br>
-                        <input name="password" type="password" placeholder="Password" required><br>
-                        <button name="submit" type="submit" variant="contained" color="primary">
-                            Sign In
-                        </button>
-
-                    </form>
-                </div>
-                <div class="container-2">
-                    <p>
-                        Already have an account ?<br>
-                        <a href="../Register/index.html">
-                            Register Here
-                        </a>
-                    </p>
-                    <p>
-                        <input type="checkbox" name="remember" id="remember">
-                        <label for="remember" style="cursor: pointer;"> Remember Me</label>
-                    </p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</header>
+    </header>
 
 
     <script>
