--- a/components/Restaurants/index.html
+++ b/components/Restaurants/index.html
@@ -61,7 +61,7 @@
     <div class="flex-container">
         <!-- 1st restaurant -->
         <div class="card">
-            <a href="../Restaurant Menu/index.html"><img src="../../assets/1st Nov.jpg" alt="Avatar"
+            <a href="../Restaurant Menu/Breakfast/index.html"><img src="../../assets/1st Nov.jpg" alt="Avatar"
                     style="width: 100%;" /></a>
             <div class="container">
                 <h4><b>1st November Hotel</b></h4>
